# wekams_Lens

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  WRITING_CONNECTORS.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  chat.py  conversations.py  health.py  sources.py
backend/app/audit/: __init__.py  hook.py
backend/app/auth/: __init__.py  bearer.py
backend/app/catalog/: __init__.py  conversations.py  db.py  export_markdown.py  models.py  service.py  vault.py
backend/app/connectors/: __init__.py  azure_blob.py  base.py  elasticsearch.py  excel.py  gcs.py  logs.py  postgres.py  registry.py  s3.py
backend/app/core/: config.py  logging.py
backend/app/llm/: __init__.py  base.py  factory.py  groq_backend.py  ollama_backend.py
backend/app/orchestrator/: __init__.py  agent.py  federation.py  schema_context.py  semantic_hook.py  sql_validator.py  tools.py
backend/app/sdk/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 5201c04abb5d_conversations_and_chat_messages.py  a8e431d6f205_audit_events.py  c5f8a921e4d3_metrics_table.py  e80a6a6322e4_initial_catalog_schema.py  f37c2d9e1a4b_licenses_table.py
backend/tests/: conftest.py  test_auth.py  test_connectors.py  test_excel_connector.py  test_sql_validator.py  test_sqlite_connector.py  test_vault.py
backend/wekams_lens_sdk/: __init__.py
frontend/: Dockerfile  node_modules  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  (+6 more)
(+30 files in other folders)
