[project]
name = "wekams-lens-backend"
version = "0.0.1"
description = "Wekams Lens — unified data agent. Backend."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Wekams Pte Ltd" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.4",
  "sse-starlette>=2.1",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "cryptography>=44.0",
  "duckdb>=1.1",
  "opensearch-py>=2.7",
  "openpyxl>=3.1",
  "sqlglot>=26.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
